--- a/index.html
+++ b/index.html
@@ -288,8 +288,8 @@
             }
             
             .main-content {
-                 /* CÁLCULO CRÍTICO Mobile: 80px (Header) + 40px (Nav-Bar colapsada) = 120px */
-                 margin-top: 120px; /* AJUSTADO: Compensação de espaço */
+                /* CÁLCULO CRÍTICO Mobile: 80px (Header) + 40px (Nav-Bar colapsada) = 120px */
+                margin-top: 120px; /* AJUSTADO: Compensação de espaço */
             }
         }
 
@@ -561,6 +561,7 @@
                     </div>
                     <p>Inscrições em breve</p>
                 </div>
+            </div>
             <div class="event-container">
                 <a href="eventos/bbc/menu-evento.html" class="event-banner">
                     <img src="img/BBCOPENAC.jpeg" alt="Banner do BBC Open de Jiu-Jitsu">
@@ -667,7 +668,7 @@
                 <h3>Siga-nos</h3>
                 <a href="https://instagram.com/arenacompetidor" target="_blank" rel="noopener noreferrer" class="social-link-container">
                     <svg class="social-icon-svg" viewBox="0 0 24 24">
-                        <path d="M12 0c-3.35 0-3.79.01-5.12.08-1.33.06-2.27.28-3.07.59s-1.44.75-1.99 1.3c-.55.55-1.02 1.25-1.3 1.99-.31.8-.53 1.74-.59 3.07-.07 1.33-.08 1.77-.08 5.12s.01 3.79.08 5.12c.06 1.33.28 2.27.59 3.07s.75 1.44 1.3 1.99c.55.55 1.25 1.02 1.99 1.3.8.31 1.74.53 3.07.59 1.33.07 1.77.08 5.12.08s3.79-.01 5.12-.08c1.33-.06 2.27-.28 3.07-.59s1.44-.75 1.99-1.3c.55-.55 1.02-1.25 1.3-1.99.31-.8.53-1.74.59-3.07.07-1.33.08-1.77.08-5.12s-.01-3.79-.08-5.12c-.06-1.33-.28-2.27-.59-3.07s-.75-1.44-1.3-1.99c-.55-.55-1.25-1.02-1.99-1.3-.8-.31-1.74-.53-3.07-.59-1.33-.07-1.77-.08-5.12-.08zm0 2.2c3.27 0 3.68.01 4.96.07 1.15.05 1.78.25 2.16.4s.69.41.95.66c.26.26.46.59.66.95.15.38.35 1.01.4 2.16.06 1.28.07 1.69.07 4.96s-.01 3.68-.07 4.96c-.05 1.15-.25 1.78-.4 2.16s-.41.69-.66.95c-.26.26-.59.46-.95.66-.38.15-1.01.35-2.16.4-1.28.06-1.69.07-4.96.07s-3.68-.01-4.96-.07c-1.15-.05-1.78-.25-2.16-.4s-.69-.41-.95-.66c-.26-.26-.46-.59-.66-.95-.15-.38-.35-1.01-.4-2.16-.06-1.28-.07-1.69-.07-4.96s.01-3.68.07-4.96c.05-1.15.25-1.78.4-2.16s.41-.69.66-.95c.26-.26.59-.46.95-.66.38-.15 1.01-.35 2.16-.4 1.28-.06 1.69-.07 4.96-.07zM12 6.8c-2.88 0-5.2 2.32-5.2 5.2s2.32 5.2 5.2 5.2 5.2-2.32 5.2-5.2-2.32-5.2-5.2-5.2zm0 8.2c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3zm5.75-8.5c-.7 0-1.25.55-1.25 1.25s.55 1.25 1.25 1.25 1.25-.55 1.25-1.25-.55-1.25-1.25-1.25z"/>
+                        <path fill="currentColor" d="M12 0c-3.35 0-3.79.01-5.12.08-1.33.06-2.27.28-3.07.59s-1.44.75-1.99 1.3c-.55.55-1.02 1.25-1.3 1.99-.31.8-.53 1.74-.59 3.07-.07 1.33-.08 1.77-.08 5.12s.01 3.79.08 5.12c.06 1.33.28 2.27.59 3.07s.75 1.44 1.3 1.99c.55.55 1.25 1.02 1.99 1.3.8.31 1.74.53 3.07.59 1.33.07 1.77.08 5.12.08s3.79-.01 5.12-.08c1.33-.06 2.27-.28 3.07-.59s1.44-.75 1.99-1.3c.55-.55 1.02-1.25 1.3-1.99.31-.8.53-1.74.59-3.07.07-1.33.08-1.77.08-5.12s-.01-3.79-.08-5.12c-.06-1.33-.28-2.27-.59-3.07s-.75-1.44-1.3-1.99c-.55-.55-1.25-1.02-1.99-1.3-.8-.31-1.74-.53-3.07-.59-1.33-.07-1.77-.08-5.12-.08zm0 2.2c3.27 0 3.68.01 4.96.07 1.15.05 1.78.25 2.16.4s.69.41.95.66c.26.26.46.59.66.95.15.38.35 1.01.4 2.16.06 1.28.07 1.69.07 4.96s-.01 3.68-.07 4.96c-.05 1.15-.25 1.78-.4 2.16s-.41.69-.66.95c-.26.26-.59.46-.95.66-.38.15-1.01.35-2.16.4-1.28.06-1.69.07-4.96.07s-3.68-.01-4.96-.07c-1.15-.05-1.78-.25-2.16-.4s-.69-.41-.95-.66c-.26-.26-.46-.59-.66-.95-.15-.38-.35-1.01-.4-2.16-.06-1.28-.07-1.69-.07-4.96s.01-3.68.07-4.96c.05-1.15.25-1.78.4-2.16s.41-.69.66-.95c.26-.26.59-.46.95-.66.38-.15 1.01-.35 2.16-.4 1.28-.06 1.69-.07 4.96-.07zM12 6.8c-2.88 0-5.2 2.32-5.2 5.2s2.32 5.2 5.2 5.2 5.2-2.32 5.2-5.2-2.32-5.2-5.2-5.2zm0 8.2c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3zm5.75-8.5c-.7 0-1.25.55-1.25 1.25s.55 1.25 1.25 1.25 1.25-.55 1.25-1.25-.55-1.25-1.25-1.25z"/>
                     </svg>
                     <span class="social-link">@arenacompetidor</span>
                 </a>
