--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                 </div>
             </div>
             <div class="event-container">
-                <a href="meu-evento-agd.html" class="event-banner">
+                <a href="eventos/emacup/emacup.html" class="event-banner">
                     <img src="img/EMACUPARENA.png" alt="Banner do EMA CUP JANDUIS">
                 </a>
                 <div class="event-info">
