--- a/eventos/emacup/chaves.html
+++ b/eventos/emacup/chaves.html
@@ -110,7 +110,7 @@
         <div class="aviso-container">
             <h1>Chaves</h1>
             <p>As chaves estão sendo preparadas e estarão disponíveis em breve. Agradecemos a compreensão!</p>
-            <a href="menu-evento.html" class="link-voltar">Voltar para o Menu do Evento</a>
+            <a href="emacup.html" class="link-voltar">Voltar para o Menu do Evento</a>
         </div>
     </div>
     
