--- a/eventos/emacup/emacup.html
+++ b/eventos/emacup/emacup.html
@@ -199,7 +199,7 @@
             <div class="menu-opcoes">
                 <a href="inscricao.html" class="btn-menu destaque">Inscrição</a>
                 <a href="alterar-inscricao.html" class="btn-menu vermelho">Alterar Inscrição</a>
-                 <a href="confirmar_pagamento.htmL" class="btn-menu vermelho">Pagar Inscrição</a>
+                 <a href="confirmar_pagamento.html" class="btn-menu vermelho">Pagar Inscrição</a>
                 <a href="checagem.html" class="btn-menu">Checagem</a>
                 <a href="https://drive.google.com/file/d/1UeKT9Qh8BC6FkkqxzBBL4GzMVVoY9XBu/view?usp=sharing" class="btn-menu" target="_blank">Edital</a>
                 <a href="chaves.html" class="btn-menu">Chaves</a>
