--- a/eventos/emacup/alterar-inscricao.html
+++ b/eventos/emacup/alterar-inscricao.html
@@ -111,7 +111,7 @@
 <body>
 
     <header>
-        <img src="img/arena2.png" alt="Arena Competidor Logo">
+        <img src="../../img/arena2.png" alt="Arena Competidor Logo">
     </header>
 
     <div class="main-content">
