--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
                         <span class="icon">📍</span> 
                         <span><b>Janduís/RN</b></span>
                     </div>
-                    <p>Inscrições em breve</p>
+                    <p>INSCRIÇÕES ABERTAS</p>
                 </div>
             </div>
             <div class="event-container">
