--- a/eventos/emacup/inscricao.html
+++ b/eventos/emacup/inscricao.html
@@ -392,7 +392,7 @@
             },
             "Juvenil": {
                 masculino: ["Leve até 69kg", "Pesado acima de 69kg até 89kg"],
-                feminino: ["Peso único de 74kg até 89,30"]
+                feminino: ["Peso unico de 74kg até 89,30"]
             },
             "Adulto": {
                 masculino: ["Leve até 76kg", "Pesado acima de 76kg"],
