--- a/eventos/emacup/inscricao.html
+++ b/eventos/emacup/inscricao.html
@@ -387,16 +387,16 @@
          */
         const pesosPorDivisao = {
             "Infantil": {
-                masculino: ["Leve até 56,5kg", "Pesado acima de 56,5kg"],
-                feminino: ["Leve até 56,5kg", "Pesado acima de 56,5kg"]
+                masculino: ["Leve ate 56,5kg", "Pesado acima de 56,5kg"],
+                feminino: ["Leve ate 56,5kg", "Pesado acima de 56,5kg"]
             },
             "Juvenil": {
-                masculino: ["Leve até 69kg", "Pesado acima de 69kg até 89kg"],
-                feminino: ["Peso unico de 74kg até 89,30"]
+                masculino: ["Leve ate 69kg", "Pesado acima de 69kg ate 89kg"],
+                feminino: ["Peso unico de 74kg ate 89,30"]
             },
             "Adulto": {
-                masculino: ["Leve até 76kg", "Pesado acima de 76kg"],
-                feminino: ["Leve até 69kg", "Pesado acima de 69kg"]
+                masculino: ["Leve ate 76kg", "Pesado acima de 76kg"],
+                feminino: ["Leve ate 69kg", "Pesado acima de 69kg"]
             },
         };
 
