--- a/eventos/emacup/inscricao.html
+++ b/eventos/emacup/inscricao.html
@@ -392,7 +392,7 @@
             },
             "Juvenil": {
                 masculino: ["Leve ate 69kg", "Pesado acima de 69kg ate 89kg"],
-                feminino: ["Peso unico de 74kg ate 89,30"]
+                feminino: ["Peso unico de 74kg ate 89,3kg"]
             },
             "Adulto": {
                 masculino: ["Leve ate 76kg", "Pesado acima de 76kg"],
