--- a/eventos/emacup/inscricao.html
+++ b/eventos/emacup/inscricao.html
@@ -405,7 +405,7 @@
          */
         const faixasPorDivisao = {
         
-            "Infantil": ["Branca", "Cinza", "Amarela", "Laranja", "Verde"],
+            "Infantil": ["Branca"],
             "Juvenil": ["Branca"],
             // A faixa "Azul e Roxa" é tratada como uma opção única
             "Adulto": ["Branca", "Azul e Roxa"], 
